[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="EXERCICIO1" type="Button" parent="."]
margin_left = 102.0
margin_top = 82.0
margin_right = 265.0
margin_bottom = 177.0
text = "EXERCICIO 1"

[node name="EXERCICIO2" type="Button" parent="."]
margin_left = 105.0
margin_top = 199.0
margin_right = 267.0
margin_bottom = 292.0
text = "EXERCICIO 2"

[node name="EXERCICIO3" type="Button" parent="."]
margin_left = 100.0
margin_top = 325.0
margin_right = 268.0
margin_bottom = 417.0
text = "EXERCICIO 3 "

[node name="EXERCICIO4" type="Button" parent="."]
margin_left = 103.0
margin_top = 447.0
margin_right = 268.0
margin_bottom = 536.0
text = "EXERCICIO 4"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 406.0
margin_top = 80.0
margin_right = 929.0
margin_bottom = 454.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 41.0
margin_top = 49.0
margin_right = 472.0
margin_bottom = 307.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 293.0
margin_top = 201.0
margin_right = 372.0
margin_bottom = 240.0

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 292.0
margin_top = 252.0
margin_right = 373.0
margin_bottom = 291.0

[node name="LineEdit3" type="LineEdit" parent="."]
margin_left = 293.0
margin_top = 461.0
margin_right = 372.0
margin_bottom = 516.0

[connection signal="pressed" from="EXERCICIO1" to="." method="_on_EXERCICIO1_pressed"]
[connection signal="pressed" from="EXERCICIO2" to="." method="_on_EXERCICIO2_pressed"]
[connection signal="pressed" from="EXERCICIO3" to="." method="_on_EXERCICIO3_pressed"]
[connection signal="pressed" from="EXERCICIO4" to="." method="_on_EXERCICIO4_pressed"]
